--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>1.2.9 Exercise</title>
 
   <!-- This critical line points your HTML to the CSS file. Notice the "relative" pathway  -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
   <!-- Plus TWO MORE -->
   <link rel="stylesheet" type="text/css" href="style2.css">
   <link rel="stylesheet" type="text/css" href="style3.css">
